First structure for livrable3